修改了项目格式规范

--- a/zuulDemo/pom.xml
+++ b/zuulDemo/pom.xml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -10,11 +9,11 @@
 		<version>2.0.3.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>zuulDemo</artifactId>
+	<groupId>gaoxiao.lei</groupId>
+	<artifactId>zuul</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>zuulDemo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>zuul</name>
+	<description>zuul</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -61,6 +60,8 @@
 		</dependency>
 	</dependencies>
 	<build>
+	<!-- 自定义jar包名 -->
+		<finalName>zuul</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
