--- a/zuulDemo/src/main/resources/application.yml
+++ b/zuulDemo/src/main/resources/application.yml
@@ -1,14 +1,12 @@
-server:
-  port: 10900 #服务端口
 eureka: #配置要eureka的信息
   client:
     serviceUrl:
-      defaultZone: http://192.168.32.250:8763/eureka/
+      defaultZone: http://trainingeureka.xiaolei.gao:8763/eureka/
   instance:
     prefer-ip-address: true
 spring: #配置服务的名字
   application:
-    name: zuulDemo
+    name: zuul
   servlet:
     multipart:
       max-file-size: 2000Mb      # Max file size，默认1M
